--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+  <div id="border"></div>
+  <div id="effects"></div>
   <div id="page"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
