--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="manifest" href="assets/favicon/site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Thomas Hardy - React Developer</title>
+  <meta property="og:image" content="assets/image-preview.png" />
+  <meta property="og:description"
+    content="Frontend developer with experience using HTML5, CSS, JavaScript, ReactJS and Typescript, to help organisations improve their user experience within applications.">
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 </head>
 
 <body>
