Added all meta properties for facebook sharing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
   <link rel="manifest" href="assets/favicon/site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Thomas Hardy - React Developer</title>
+  <meta property="og:url" content="https://thomashardydev.com" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Thomas Hardy - React Developer" />
   <meta property="og:image" content="https://thomashardydev.com/assets/image-preview.png" />
   <meta property="og:description"
     content="Frontend developer with experience using HTML5, CSS, JavaScript, ReactJS and Typescript, to help organisations improve their user experience within applications.">
