--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:url" content="https://thomashardydev.com" />
   <meta property="og:type" content="website" />
+  <title>Thomas Hardy - React Developer</title>
   <meta property="og:title" content="Thomas Hardy - React Developer" />
   <meta property="og:image" content="https://thomashardydev.com/assets/image-preview.png" />
   <meta property="og:description"
